updated start page info

--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@ layout: default
 
 <div class="home">
 
+I am a physicist turned structural biologist working at the interface of computation, AI, and experimental structural biology. My work focuses on understanding the limits of simplified models in molecular biology and on extracting reliable insight from noisy and incomplete data.
+
+<br />
+<br />
+I combine AI-based structure prediction with integrative analysis of macromolecular X-ray crystallography (MX), cryo-EM, and SAXS data. I develop methods and software for structural biology; my programs included in CCP4 and CCPEM form a comprehensive toolkit for macromolecular sequence validation and AI-based model rebuilding.
+
+<br />
+<br />
+Formerly a staff member at <a href="https://www.embl.org/sites/hamburg/">EMBL Hamburg</a>, I now work as an independent research consultant on computational and data-intensive projects, offering scientific advisory services to academic groups and companies.
+
+<!--
 I am a physicist turned structural biologist. I try to understand the limitations of simplified models in molecular biology and why what's true for <i>E. coli</i> is not necessarily true for an elephant.
 
 <br />
 <br />
 
-I interact with the environment using MX, EM, SAXS, and AI. Currently, a big data dweller, I don't do much experimental work anymore. Staff member at <a href="https://www.embl.org/sites/hamburg/">EMBL Hamburg</a>.
+I interact with the environment using MX, EM, SAXS, and AI. Currently, a big data dweller, I don't do much experimental work anymore. Formelly, a staff member at <a href="https://www.embl.org/sites/hamburg/">EMBL Hamburg</a>.
 
 <br />
 
-<!--
 Check my profiles at <a href="https://scholar.google.pl/citations?user=N7sQfAgAAAAJ&hl=en">google scholar</a>, <a href="https://gitlab.com/gchojnowski">gitlab</a>, and <a href="https://github.com/gchojnowski">github</a>, and <a href="https://bsky.app/profile/gchojnowski.bsky.social">bluesky</a>.
 -->
 
